docs: simplify README structure